--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
 body {
-	text-align: center;
+    text-align: center;
 }
 
 section {
-    margin: 10px;
+    margin: 20px;
 }
 
-table, th , td  {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 5px;
-  margin: 0 auto;
+table,
+th,
+td {
+    border: 1px solid grey;
+    border-collapse: collapse;
+    padding: 5px;
+    margin: 0 auto;
 }
+
 table tr:nth-child(odd) {
-  background-color: #f1f1f1;
+    background-color: #f1f1f1;
 }
+
 table tr:nth-child(even) {
-  background-color: #ffffff;
+    background-color: #ffffff;
 }
