--- a/content/css/app.css
+++ b/content/css/app.css
@@ -22,12 +22,38 @@ table tr {
     background-color: #FAFAFA;
 }
 
-table tr:nth-child(even) {
-    /*    background-color: #f1f1f1;*/
+#enter-username-label {
+    color: #616161;
+    padding-left: 20px;
 }
 
-table tr:nth-child(odd) {
-    /*    background-color: #ffffff;*/
+#error-label {
+    color: #616161;
+    padding-left: 20px;
+}
+
+#username-input {
+    border: none;
+    color: #616161;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 20px;
+    font-size: 3rem;
+    width: 74%;
+    height: 75px;
+    vertical-align: bottom;
+    outline: none;
+}
+
+#search-button {
+    border: none;
+    border-radius: 1px;
+    background-color: #72B03A;
+    margin-left: -3px;
+    padding: 20px;
+    font-size: 2.5rem;
+    width: 24%;
+    height: 75px;
 }
 
 .followers-title {
@@ -52,9 +78,11 @@ table tr:nth-child(odd) {
     font-weight: 300;
 }
 
+.search-div {
+    text-align: left;
+}
+
 .username-div {
-    /*    border: 1px dashed red;*/
-    /*    border-left: 5px solid #616161;*/
     background-color: #F5F5F5;
     padding: 20px;
 }
