--- a/app/layout/navbar.html
+++ b/app/layout/navbar.html
@@ -1,5 +1,3 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="navbar-header">
-        <span class="navbar-title">GitHub Followers v2.7</span>
-    </div>
+<nav class="navbar-fixed-top navbar-custom">
+    <span class="navbar-title">GitHub Followers v2.8</span>
 </nav>
